src/objects/Call_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallTopicAccessExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CallTopicAccessExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Sub_Type__c</fullName>
        <label>Call Sub Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Request</fullName>
                </value>
                <value>
                    <fullName>Missing Bills Not in System</fullName>
                </value>
                <value>
                    <fullName>Member Termed/Requested Reason Large and Small Group Premium Management</fullName>
                </value>
                <value>
                    <fullName>Member Disenrolled Incorrectly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Subtype__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Topic_Group__c</fullName>
        <label>Call Topic Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Auths and Referrals</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Materials &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>General Request</fullName>
                </value>
                <value>
                    <fullName>Non-Medical</fullName>
                </value>
                <value>
                    <fullName>Proactive Engagement</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Topic__c</fullName>
        <label>Call Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Type</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail_Page__c</fullName>
        <label>Detail Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Detail</fullName>
                </value>
                <value>
                    <fullName>Producer Detail</fullName>
                </value>
                <value>
                    <fullName>Group Detail</fullName>
                </value>
                <value>
                    <fullName>Provider Detail</fullName>
                </value>
                <value>
                    <fullName>Member Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Except_To_Roles__c</fullName>
        <description>roles from this list is not able to access the call topic</description>
        <label>Except To Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable - Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Acet Front office</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Commitment Team - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Commitment Team - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Site Director</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Billing - Agent</fullName>
                </value>
                <value>
                    <fullName>Billing - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CART - Agent</fullName>
                </value>
                <value>
                    <fullName>CART - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Agent</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Clinical - Agent</fullName>
                </value>
                <value>
                    <fullName>Clinical - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Agent</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Configuration - Agent</fullName>
                </value>
                <value>
                    <fullName>Configuration - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CPM - Agent</fullName>
                </value>
                <value>
                    <fullName>CPM - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CSO/CSS - Manager</fullName>
                </value>
                <value>
                    <fullName>CSO/CSS - Site Director</fullName>
                </value>
                <value>
                    <fullName>CSO - Agent</fullName>
                </value>
                <value>
                    <fullName>CSO - Commitment Team</fullName>
                </value>
                <value>
                    <fullName>CSO - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CSS Agent - EB/Email Team</fullName>
                </value>
                <value>
                    <fullName>DCSM/DGSA - Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_To_Roles__c</fullName>
        <description>Only roles from the list can access to the calltopic</description>
        <label>Limit To Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable - Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Acet Front office</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Commitment Team - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Commitment Team - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Site Director</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Billing - Agent</fullName>
                </value>
                <value>
                    <fullName>Billing - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CART - Agent</fullName>
                </value>
                <value>
                    <fullName>CART - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Agent</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Clinical - Agent</fullName>
                </value>
                <value>
                    <fullName>Clinical - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Agent</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Configuration - Agent</fullName>
                </value>
                <value>
                    <fullName>Configuration - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CPM - Agent</fullName>
                </value>
                <value>
                    <fullName>CPM - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CSO/CSS - Manager</fullName>
                </value>
                <value>
                    <fullName>CSO/CSS - Site Director</fullName>
                </value>
                <value>
                    <fullName>CSO - Agent</fullName>
                </value>
                <value>
                    <fullName>CSO - Commitment Team</fullName>
                </value>
                <value>
                    <fullName>CSO - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CSS Agent - EB/Email Team</fullName>
                </value>
                <value>
                    <fullName>DCSM/DGSA - Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_OOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name(OOB)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group/Employer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>UHG</fullName>
                </value>
                <value>
                    <fullName>Unlisted Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Mapping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VF_Page_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VF Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Call Topic</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Call_Topic__c</columns>
        <columns>Detail_Page__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Except_To_Roles__c</columns>
        <columns>Limit_To_Roles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Topic Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>